# HapticAerialDrillPress

drillpress_pack/: CMakeLists.txt  package.xml
drillpress_pack/Old_files/: Drillpress_pubsub_old.cpp  GantryControl_old.cpp  andybd.cpp
drillpress_pack/src/: Data_arrangement.cpp  Drillpress_pubsub.cpp  GantryControl.cpp  Torque_read_pub.cpp  UAV_Drillsensor.cpp
flight_test/: CMakeLists.txt
flight_test/src/: ftest_pidcontrol2_drill.cpp  ftest_poscommand.cpp  ftest_poshold.cpp  ftest_setpoint2_drill.cpp
optitrack/scripts/: Optitrack_publisher.py
sitl_test/: CMakeLists.txt  mocap_px4plugin.yaml  package.xml  setup.py
sitl_test/scripts/: mavros_offboard_posctl_test.py
sitl_test/src/: 1_arm_disarm.cpp  2_position_hold.cpp  3_position_control.cpp  4_drillpress_position_control_iros2020.cpp  5_drillpress_position_control2_iros2020.cpp
